force-app/main/default/objects/Rent_Payment__c/Rent_Payment__c.object-meta.xml
<CustomObject>
    <description>Represents a rent invoice generated for each rent payment cycle of a Tenancy. One record is created per payment period (weekly/fortnightly/monthly). Status changes to Paid when the tenant completes the payment.</description>
    <label>Rent Payment</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rent Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>