force-app/main/default/objects/Rent_Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The base rent amount for this invoice period, excluding GST. Copied from Tenancy__c.Rent_Amount__c at invoice generation.</description>
    <label>Amount (ex GST)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>