force-app/main/default/objects/Rent_Payment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date payment is due. Copied from Tenancy__c.Next_Due_Date__c at invoice generation time.</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>