force-app/main/default/objects/Rent_Payment__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <description>GST component of this invoice (10% of Amount). Populated by Flow only when the landlord Account has GST_Registered__c = true. Zero for non-GST-registered landlords.</description>
    <label>GST Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>