force-app/main/default/objects/Rent_Payment__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>The date this invoice was generated. Defaults to the start of the billing period.</description>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>