force-app/main/default/objects/Rent_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>The date the rent payment was received. Populated when Status is set to Paid.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>