force-app/main/default/objects/Rent_Payment__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>Bank transfer reference, receipt number, or payment gateway transaction ID for reconciliation.</description>
    <label>Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>