force-app/main/default/objects/Rent_Payment__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>End date of the rent period this invoice covers.</description>
    <label>Period End</label>
    <type>Date</type>
</CustomField>