force-app/main/default/objects/Rent_Payment__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start date of the rent period this invoice covers.</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>