force-app/main/default/objects/Rent_Payment__c/fields/Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Tenancy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Tenancy this invoice belongs to. Rent amount, frequency, and tenant details are derived from this record.</description>
    <label>Tenancy</label>
    <referenceTo>Tenancy__c</referenceTo>
    <relationshipLabel>Rent Payments</relationshipLabel>
    <relationshipName>Rent_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>