force-app/main/default/objects/Rent_Payment__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total invoice amount including GST. Formula: Amount__c + GST_Amount__c.</description>
    <formula>Amount__c + IF(ISNULL(GST_Amount__c), 0, GST_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (inc GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>